--- a/obra1.html
+++ b/obra1.html
@@ -24,7 +24,7 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <img src="magenes/peregrinacion.jpg" alt="Portada de la obra" class="imagen" style="margin-left: 300px;">
+    <img src="imagenes/peregrinacion.jpg" alt="Portada de la obra" class="imagen" style="margin-left: 300px;">
     <div class="Peregrina">
         <p class="texto" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Peregrinaciones de una
             paria es la obra autobiográfica más significativa de Flora Tristán, publicada en 1838. En ella relata el
