--- a/obra1.html
+++ b/obra1.html
@@ -10,9 +10,9 @@
 
 <body>
     <nav>
-        <img src="imagenes/fotoFlora.png" width="200">
+        <img src="imagenes/fotoFlora.png" alt="Logo de Flora Tristán" width="200" style="margin-left: 20px;">
         <ul class="barraMenu">
-            <li><a href=index.html>Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a>Obras</a>
                 <ul class="barraMenuVertical">
                     <li><a href="obra1.html">Peregrinaciones de una Paria</a></li>
@@ -26,22 +26,8 @@
     </nav>
     <img src="imagenes/peregrinacion.jpg" alt="Portada de la obra" class="imagen">
     <div class="Peregrina">
-        <p class="texto" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Peregrinaciones de una
-            paria es la obra autobiográfica más significativa de Flora Tristán, publicada en 1838. En ella relata el
-            viaje que emprendió a Perú entre 1833 y 1834 con la intención de reclamar los derechos de herencia de su
-            padre, pero ese propósito inicial se transforma en una profunda reflexión sobre la desigualdad, la opresión
-            y la injusticia. A través del formato de diario de viaje, Flora construye una crítica incisiva a la sociedad
-            peruana poscolonial, denunciando la corrupción de las élites criollas, el racismo estructural, la esclavitud
-            y la marginación de los pueblos indígenas y afrodescendientes. Al mismo tiempo, analiza con agudeza la
-            condición femenina, visibilizando el papel subordinado de la mujer tanto en América Latina como en Europa.
-            El término “paria”, que utiliza para referirse a sí misma, refleja su sentimiento de exclusión como mujer
-            sin derechos legales ni reconocimiento social, y se convierte en símbolo de todas las personas marginadas.
-            La obra destaca por su tono valiente, su mirada crítica y su compromiso temprano con los ideales feministas
-            y socialistas, que más adelante profundizaría en escritos como La Unión Obrera. Lejos de ser solo un
-            testimonio personal, Peregrinaciones de una paria es un texto político y social que anticipa muchas de las
-            luchas por la justicia y la igualdad que marcarían el siglo XIX.</p>
+        <p class="texto">Peregrinaciones de una paria es la obra autobiográfica más significativa de Flora Tristán, publicada en 1838. En ella relata el viaje que emprendió a Perú entre 1833 y 1834 con la intención de reclamar los derechos de herencia de su padre, pero ese propósito inicial se transforma en una profunda reflexión sobre la desigualdad, la opresión y la injusticia. A través del formato de diario de viaje, Flora construye una crítica incisiva a la sociedad peruana poscolonial, denunciando la corrupción de las élites criollas, el racismo estructural, la esclavitud y la marginación de los pueblos indígenas y afrodescendientes. Al mismo tiempo, analiza con agudeza la condición femenina, visibilizando el papel subordinado de la mujer tanto en América Latina como en Europa. El término “paria”, que utiliza para referirse a sí misma, refleja su sentimiento de exclusión como mujer sin derechos legales ni reconocimiento social, y se convierte en símbolo de todas las personas marginadas. La obra destaca por su tono valiente, su mirada crítica y su compromiso temprano con los ideales feministas y socialistas, que más adelante profundizaría en escritos como La Unión Obrera. Lejos de ser solo un testimonio personal, Peregrinaciones de una paria es un texto político y social que anticipa muchas de las luchas por la justicia y la igualdad que marcarían el siglo XIX.</p>
     </div>
-
 </body>
 
 </html>
