--- a/obra2.html
+++ b/obra2.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav>
-        <img src="imagenes/fotoFlora.png" width="200">
+        <img src="imagenes/fotoFlora.png" width="200" style="margin-left: 20px;">
         <ul class="barraMenu">
             <li><a href=index.html>Inicio</a></li>
             <li><a>Obras</a>
@@ -24,7 +24,7 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <img src="imagenes/obra2.jpg" alt="Portada de la obra" class="imagen" style="margin-left: 300px;">
+    <img src="imagenes/obra2.jpg" alt="Portada de la obra" class="imagen">
     <div class="Obrera">
         <p class="texto" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">La Unión Obrera,
             publicada en 1843, es la obra más influyente de Flora Tristán y uno de los textos fundacionales del
