--- a/obra3.html
+++ b/obra3.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav>
-        <img src="imagenes/fotoFlora.png" width="200">
+        <img src="imagenes/fotoFlora.png" width="200" style="margin-left: 20px;">
         <ul class="barraMenu">
             <li><a href=index.html>Inicio</a></li>
             <li><a>Obras</a>
@@ -24,7 +24,7 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <img src="imagenes/tristan3.jpg" alt="Portada de la obra" class="imagen" style="margin-left: 300px;">
+    <img src="imagenes/tristan3.jpg" alt="Portada de la obra" class="imagen">
     <div class="Ema">
         <p class="texto" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">La emancipación de la
             mujer es una de las obras clave de Flora Tristán en la que expone con claridad su pensamiento feminista en
